--- a/index.html
+++ b/index.html
@@ -5,72 +5,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.3/ui-bootstrap-tpls.js"></script>
     <script src="js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
-    <div ng-controller="mainController" class="container">
-
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="text-center">Welcome to performance.issues()!</h1>
-                    <h2 class="text-center">Every developer has them</h2>
-                </div>
-            </div>
-
-        <div class="row">
-            <div class="col-6-lg" id="comments">
-
-                <div ng-repeat="x in comments" class="comment">
-
-                    <span>{{x.from}}<br>{{x.body}}</span>
-
-                </div>
-
-            </div>
-
-            <div id="textWrap">
-
-                <textarea ng-model="newComment"></textarea>
-
-                <button ng-click="addComment($event)">Comment</button>
 
 
 
-            </div>
-
-        </div>
+<div ng-view></div>
 
 
 
-
-
-     <!--<div class="pract">-->
-
-         <!--<label for="name">Name:</label>-->
-         <!--<input id="name" ng-model="name">-->
-         <!--<label for="pass">Password:</label>-->
-         <!--<input id="pass" ng-model="pass">-->
-
-         <!--<button ng-click="addForm($event)">Add</button>-->
-
-     <!--</div>-->
-
-     <!--<div id="info">-->
-
-         <!--<div ng-repeat="y in users">-->
-
-             <!--<span>{{y.user}}<br>{{y.pass}}</span>-->
-
-
-         <!--</div>-->
-
-     <!--</div>-->
-
-
-    </div>
 
 
 
