--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
     <script src="js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/PILOGO1.png">
 </head>
 <body>
 
 
-
-
 <div ng-view></div>
-
-
-
-
 
 
 </body>
